--- a/index.html
+++ b/index.html
@@ -11,5 +11,5 @@
         <h1>Not rendered</h1>
     </div>
 </body>
-<script src="App.js" type="module"></script>
+<script src="./src/App.js" type="module"></script>
 </html>
